--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ include: ['_pages']
 collections:
   chapters:
     output: true
-    permalink: /chapters/:title/
+    permalink: /:collection/:title/
