--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: MaintainableCSS - an approach to writing modular, scalable and maintainable stylesheets | By Adam Silver
+name: MaintainableCSS - an approach to writing modular, scalable and maintainable CSS | By Adam Silver
 markdown: kramdown
 url: http://maintainablecss.com
 include: ['_pages']
@@ -6,4 +6,4 @@ collections:
   chapters:
     output: true
     permalink: /:collection/:title/
-description: MaintainableCSS is an approach to writing modular, scalable and of course, maintainable stylesheets.
+description: MaintainableCSS is an approach to writing modular, scalable and of course, maintainable CSS.
